2000-11-15 12:01
    Fixed Ullrich's refcount bug

    Moved operator_dispatcher into extclass.cpp
    Gave it shared ownership of the objects it wraps

    Introduced sequence points in extension_class_coerce for exception-safety

    UPPER_CASE_MACRO_NAMES

    MixedCase template type argument names

    Changed internal error reporting to use Python exceptions so we don't force the
    user to link in iostreams code

    Changed error return value of call_cmp to -1

    Moved unwrap_* functions out of operator_dispatcher. This was transitional: when
    I realized they didn't need to be declared in extclass.h I moved them out, but
    now that operator_dispatcher itself is in extclass.cpp they could go back in.

    Numerous formatting tweaks

    Updated the BoundFunction::create() optimization and enabled it so it could actually be used!

2000-11-15 00:26

    Made Ullrich's operators support work with MSVC
    
    Cleaned up operators.h such that invalid define_operator<0> is no longer needed.

2000-11-13 22:29

    removed obsolete ExtensionClassFromPython for good.

    removed unused class ExtensionType forward declaration

2000-11-12 13:08

    Added enum_as_int_converters for easier enum wrapping

    Introduced new conversion namespace macros:
        PY_BEGIN_CONVERSION_NAMESPACE,
        PY_END_CONVERSION_NAMESPACE,
        PY_CONVERSION

    callback.h, gen_callback.py:
        Added call() function so that a regular python function (as opposed to
         method or other function-as-attribute) can be called.

         Added newlines for readability.

    class_wrapper.h:
        Fixed a bug in add(), which allows non-method class attributes

    Ullrich has added def_raw for simple varargs and keyword support.

    Fixed version number check for __MWERKS__
    
    Added tests for enums and non-method class attributes

    objects.h/objects.cpp:
        Added py::String operator*= and operator* for repetition
